@@ -1,6 +1,7 @@
 = 4.5.9 - 04.04.2022 =
 Fixed: Security issues regarding file downloads and download titles
-
+Added: Option to not count admin downloads. ( https://github.com/WPChill/download-monitor/issues/854 )
+Added: No-index/no-follow header for redirect to file option ( https://github.com/WPChill/download-monitor/issues/879 )
 = 4.5.8 - 28.03.2022 =
 Fixed: Upgrade to PRO now disappears when all extensions installed ( https://github.com/WPChill/download-monitor/issues/875 )
 
